# ilastik

./: .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  .travis.yml.old  CITATION.cff  CMakeLists.txt  CMakeLists.txt~  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestTestfile.cmake  FindVigra.cmake  LICENSE  MANIFEST.in  PhD_Application  README.md  Readme.md  TODO  __init__.py  app.py  appIcon.icns  applet_api.html  applet_library.html  appveyor.yml  bigDatasetLoader.py  circle.yml  classificationWorkflow.py  classificationWorkflow2.py  clean.sh  cluster_options.json  cluster_todo  conda-build-setup.py  dependencies.html  example_cluster_options.json  (+67 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.travis_scripts/: build_drtile.sh  install_cylemon.sh  install_lemon.sh  install_vigra.sh
_modules/: abc.html  index.html
_sources/: applet_library.txt  dependencies.txt
benchmarks/: iv.py  latency.py  objectExtractionRunningTime.py  operatorWrapper.py  pixel_classification_threadpool.py  pixel_classification_webilastik.py
catmaid/: catmaid_server.py
classification/: classificationWorkflow.py  classificationWorkflow.ui  exportDlg.py  exportDlg.ui  exporterDlg.ui  loadFileDlg.py  loadFileDlg.ui  opStackWriter.py  pixel_classification_lazyflow.py  saveDialog.py  saveDialog.ui  testOpPNGStackWriter.py
conda-recipe/: meta.yaml
conda-recipe-release/: meta.yaml
designerElements/: ClassificationWidget.ui  MainWindow.ui  MainWindow_multifile.ui  grayLayerDialog.ui  layerDialog.ui  rgbaLayerDialog.ui  thresholdingWidget.ui
dev/: environment-dev.yml
docs/: .gitignore  Makefile  advanced.rst  appletExample.rst  applet_api.rst  applet_library.RST  applet_library.rst  classifiers.rst  conf.py  dependencies.rst  documentation.rst  documentation_maintenance.rst  index.rst  iterator.rst  iterator.txt  lazyflow_overview.rst  make.bat  new_workflow.rst  nice2know.rst  operator_overview.rst  overview.rst  push-to-origin-gh-pages.sh  request.rst  testing.rst  troubleshooting.rst  utilities.rst  workflowExample.rst  workflow_design.rst
drtile/: drtile.cpp
examples/: example_feats.yapsy-plugin  example_pixelclassification.py  example_python_client.py  obj_feats_example.py  opSimplePixelClassification.py  opSlic.py
experimental/: labels_to_one_channel.py  neuro_downscale.py  neuro_prepare.py  neuro_test1.py  test1.py  test2.py
igms/: bigDatasetLoader.py  featureDlg.py  featureTableWidget_plugin.py  labelListModel.py  labelListView_plugin.py  overlayTreeWidget.py  overlayTreeWidget_plugin.py  stackloader.py
ilastik/: __init__.py  __main__.py  app.py  clusterConfig.py  clusterOps.py  config.py  excepthooks.py  exceptions.py  expose_submodules.py  feature_extractor.py  ilastik  ilastik-splash.xcf  logging_config.json  monkey_patches.py  plugins.py  vigra_features.py  workflow.py
ilastik-shell/: ilastikShell.py  ilastik_logging_config.py  ilastik_shell.py  logging_config.json  oldIlastikInNewShoes.py  test_ilastikShell.py
ilastik/applets/counting/cwrapper/: CMakeLists.txt  FindCPLEX.cmake  FindGurobi.cmake  __init__.py  findcplexversion.c  findversion.c
ilastik/applets/counting/cwrapper/cplex/: CMakeLists.txt  __init__.py  cplexwrapper.c
ilastik/applets/counting/cwrapper/gurobi/: CMakeLists.txt  __init__.py  gurobiwrapper.c
ilastik_scripts/: ilastik_startup.py
infinity-viewer/: inftyview.py
lazyflow/: RESTfulBlockwiseFileset.py  RESTfulVolume.py  RESTfulVolumeDescription.py  __init__.py  base.py  bigRequestStreamer.py  blockwiseFileset.py  cancel_token.py  config.py  expose_submodules.py  fileLock.py  futures_utils.py  graph.py  h5dumprestore.py  helpers.py  jsonConfig.py  metaDict.py  operator.py  operatorWrapper.py  pathHelpers.py  request.py  request_rewrite.py  roi.py  roiRequestBatch.py  rtype.py  slot.py  stype.py  testing.py  tracer.py
lazyflow/drtile/: .gitignore  CMakeLists.txt  FindNumpy.cmake  FindVigra.cmake  __init__.py  drtile.cpp
manual_context_tests/: graph_save.py  realtest2d.py  test.h5  test_batch_selective.py  test_context_star_2d.py  test_context_star_3d.py  test_context_variance.py  test_integral_2.py
notebooks/: Readme.md
objdetection/: MainWindow_cc.ui  classificationWorkflow_cc.py  connected_comp.py  objects.py  testCC.py
openalea/: __wralea__.py  lazyflowoperators.py
operators/: contextAverage.py  contextHistogram.py  contextStar.py  contextStar3d.py  contextVariance.py  operators.py  shift.py
playground/: .adjacencyGraph.pyx.swp  adjacencyGraph.pyx  adjacencyGraph.pyxbld  adjacencyGraph.pyxbldc  preprocess.py
prof/: featurePredictionTimeProf.py
requirements/: build_drtile.sh  development-stage1.txt  development-stage2.txt  install_h5py.sh  install_vigra.sh
scripts/: check-license.py  create-dev-env.bat  create-dev-env.sh  devenv.py  install-cplex-shared-libs.sh  install-gurobi-symlinks.sh
segmentation/: classificationWorkflow.ui  segmentationWorkflow.py  segmentation_lazyflow.py
serialization/: SerializableItem.py
sphericaltexture/: README.md  pyproject.toml
sphericaltexture/conda-recipe/: meta.yaml
sphericaltexture/sphericaltexture/: __init__.py  sphericaltexture.py  sphericaltexture.yapsy-plugin
sphericaltexture/tests/: test_feature_format.py
sphericaltexture_plugin/: .gitignore  README.md  environment.yaml  pyproject.toml
sphericaltexture_plugin/conda-recipe/: meta.yaml
sphericaltexture_plugin/my_feature_plugin/: README.md  environment.yaml  pyproject.toml
sphericaltexture_plugin/my_feature_plugin/conda-recipe/: meta.yaml
sphericaltexture_plugin/my_feature_plugin/my_feature_plugin/: __init__.py  the_module.py  the_module.yapsy-plugin
sphericaltexture_plugin/my_feature_plugin/tests/: test_feature_format.py
sphericaltexture_plugin/sphericaltexture_plugin/: __init__.py  objfeat_sphericaltexture.py  objfeat_sphericaltexture.yapsy-plugin
sphericaltexture_plugin/tests/: test_feature_format.py
src/: contextAverage.hxx  extractLabels.py  graph.py  histogram.hxx  integralImage.hxx  operators.py  (+9 more)
(+2560 files in other folders)
