[metadata]
name = ilastik-core
description = ilastik - the interactive learning and segmentation toolkit
url = https://github.com/ilastik/ilastik

[options]
packages = find:
include_package_data = True

[options.packages.find] #optional
include=ilastik*, lazyflow*

[tool:pytest]
python_files = test*.py
testpaths = tests lazyflow
addopts =
    -p no:pytest-qt
    --doctest-modules
    --doctest-ignore-import-errors
    --doctest-continue-on-failure
